<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="app_name">Litecoin Widget</string>

 <string name="pref_category_data">Settings</string>
 <string name="pref_category_ad">Advertisement:</string>

 <string name="pref_exchange">Exchange</string>
 <string name="pref_summary_exchange">select an exchange</string>
 <string name="pref_coin">Coin</string>
 <string name="pref_summary_coin">select an exchange first</string>

 <string name="pref_owc">Old World Currency</string>
 <string name="pref_summary_owc">for displaying estimates (default: USD)</string>

 <string name="pref_trans">Level of Transparency</string>

 <string name="pref_txtcolor">Text Color</string>

 <string name="pref_interval">Update Interval</string>
 <string name="pref_summary_interval">30 minutes</string>

 <string name="pref_done">LET\'S GO ALREADY!</string>

 <string name="button_go">go</string>

 <string name="dialog_color_picker">Color Picker</string>
 <string name="press_color_to_apply">Press on Color to select</string>
 <string name="pref_bgcolor">Background Color</string>

</resources>
