<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 <PreferenceCategory
   android:title="@string/pref_category_data"
   android:key="pref_key_category_data">
 <ListPreference
   android:title="@string/pref_exchange"
   android:key="pref_key_exchange"
   android:summary="@string/pref_summary_exchange"
   android:entries="@array/array_exchanges"
   android:entryValues="@array/array_exchange_values" />
 <ListPreference
   android:title="@string/pref_owc"
   android:key="pref_key_owc"
   android:summary="@string/pref_summary_owc"
   android:entries="@array/array_owc_names"
   android:entryValues="@array/array_owc_values"
   android:defaultValue="USD"
 />
 <ListPreference
   android:title="@string/pref_color"
   android:key="pref_key_color"
   android:entries="@array/array_color_names"
   android:entryValues="@array/array_color_values"
   android:defaultValue="ltg"
 />
 <ListPreference
   android:title="@string/pref_trans"
   android:key="pref_key_trans"
   android:entries="@array/array_trans_names"
   android:entryValues="@array/array_trans_values"
   android:defaultValue="ltg"
 />
 <CheckBoxPreference
   android:title="@string/pref_done"
   android:key="pref_key_done"
 />
 </PreferenceCategory>
</PreferenceScreen>
